--- a/IOSModelBay/Views&Controllers/Profile/Likes/Views/MB_AddAblumMenuView.xib
+++ b/IOSModelBay/Views&Controllers/Profile/Likes/Views/MB_AddAblumMenuView.xib
@@ -4,44 +4,54 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="FUTURASTD-BOOK.OTF">
+            <string>FuturaStd-Book</string>
+            <string>FuturaStd-Book</string>
+            <string>FuturaStd-Book</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MB_AddAblumMenuView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="139"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="send photos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ye7-uN-WVg">
-                    <rect key="frame" x="112" y="8" width="96" height="36"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SEND PHOTOS" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ye7-uN-WVg">
+                    <rect key="frame" x="112" y="0.0" width="97" height="39"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="39" id="WiL-Aq-EfC"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="FuturaStd-Book" family="Futura Std" pointSize="14"/>
+                    <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Im6-v8-s5z">
-                    <rect key="frame" x="0.0" y="52" width="320" height="3"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <rect key="frame" x="0.0" y="39" width="320" height="1"/>
+                    <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="3" id="Ex3-gL-D4C"/>
+                        <constraint firstAttribute="height" constant="1" id="Ex3-gL-D4C"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xcB-JT-Qxx">
-                    <rect key="frame" x="5" y="60" width="80" height="85"/>
+                    <rect key="frame" x="50" y="63" width="70" height="50"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_album" translatesAutoresizingMaskIntoConstraints="NO" id="axR-Wq-RbE">
-                            <rect key="frame" x="11" y="0.0" width="59" height="56"/>
+                            <rect key="frame" x="22" y="0.0" width="27" height="27"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="59" id="FvW-1J-uPP"/>
-                                <constraint firstAttribute="height" constant="56" id="l2Z-X3-CPT"/>
+                                <constraint firstAttribute="width" constant="27" id="12l-go-LJO"/>
+                                <constraint firstAttribute="height" constant="27" id="VkB-Sp-OVT"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Album" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mbc-a6-MTl">
-                            <rect key="frame" x="0.0" y="64" width="80" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ALBUM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mbc-a6-MTl">
+                            <rect key="frame" x="0.0" y="37" width="70" height="13"/>
+                            <fontDescription key="fontDescription" name="FuturaStd-Book" family="Futura Std" pointSize="12"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="laP-4V-iaX">
-                            <rect key="frame" x="0.0" y="0.0" width="80" height="85"/>
+                            <rect key="frame" x="0.0" y="0.0" width="70" height="50"/>
                             <state key="normal">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -49,10 +59,11 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="mbc-a6-MTl" firstAttribute="top" secondItem="axR-Wq-RbE" secondAttribute="bottom" constant="8" id="CrW-9X-jQf"/>
+                        <constraint firstItem="mbc-a6-MTl" firstAttribute="top" secondItem="axR-Wq-RbE" secondAttribute="bottom" constant="10" id="CrW-9X-jQf"/>
                         <constraint firstItem="laP-4V-iaX" firstAttribute="top" secondItem="xcB-JT-Qxx" secondAttribute="top" id="GSm-OC-lmb"/>
                         <constraint firstAttribute="bottom" secondItem="mbc-a6-MTl" secondAttribute="bottom" id="JAD-Mz-Nh3"/>
-                        <constraint firstAttribute="width" constant="80" id="OXx-Az-2lm"/>
+                        <constraint firstAttribute="height" constant="50" id="JBe-EF-aah"/>
+                        <constraint firstAttribute="width" constant="70" id="OXx-Az-2lm"/>
                         <constraint firstItem="axR-Wq-RbE" firstAttribute="top" secondItem="xcB-JT-Qxx" secondAttribute="top" id="YKz-ox-dZz"/>
                         <constraint firstItem="laP-4V-iaX" firstAttribute="leading" secondItem="xcB-JT-Qxx" secondAttribute="leading" id="edH-Tm-WAw"/>
                         <constraint firstAttribute="bottom" secondItem="laP-4V-iaX" secondAttribute="bottom" id="jJY-Zn-k57"/>
@@ -63,23 +74,23 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yot-O1-jg3">
-                    <rect key="frame" x="219" y="60" width="80" height="85"/>
+                    <rect key="frame" x="200" y="63" width="70" height="50"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_poster" translatesAutoresizingMaskIntoConstraints="NO" id="Dxc-ND-aE9">
-                            <rect key="frame" x="11" y="0.0" width="59" height="56"/>
+                            <rect key="frame" x="22" y="0.0" width="27" height="27"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="56" id="4Zu-HM-YCe"/>
-                                <constraint firstAttribute="width" constant="59" id="ddu-t1-7k7"/>
+                                <constraint firstAttribute="height" constant="27" id="TQ1-Bn-TVo"/>
+                                <constraint firstAttribute="width" constant="27" id="zeD-fK-xyW"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Poster" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tss-Ya-CA4">
-                            <rect key="frame" x="0.0" y="64" width="80" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="POSTER" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tss-Ya-CA4">
+                            <rect key="frame" x="0.0" y="37" width="70" height="13"/>
+                            <fontDescription key="fontDescription" name="FuturaStd-Book" family="Futura Std" pointSize="12"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1kh-t8-Mcd">
-                            <rect key="frame" x="0.0" y="0.0" width="80" height="85"/>
+                            <rect key="frame" x="0.0" y="0.0" width="70" height="50"/>
                             <state key="normal">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -91,29 +102,28 @@
                         <constraint firstAttribute="bottom" secondItem="1kh-t8-Mcd" secondAttribute="bottom" id="Bnm-la-amv"/>
                         <constraint firstAttribute="trailing" secondItem="tss-Ya-CA4" secondAttribute="trailing" id="DxR-xi-dfV"/>
                         <constraint firstAttribute="bottom" secondItem="tss-Ya-CA4" secondAttribute="bottom" id="E2s-3D-4Wj"/>
-                        <constraint firstAttribute="width" constant="80" id="PLi-cE-aKA"/>
+                        <constraint firstAttribute="width" constant="70" id="PLi-cE-aKA"/>
                         <constraint firstItem="1kh-t8-Mcd" firstAttribute="top" secondItem="yot-O1-jg3" secondAttribute="top" id="QgE-gF-tGz"/>
                         <constraint firstItem="Dxc-ND-aE9" firstAttribute="top" secondItem="yot-O1-jg3" secondAttribute="top" id="U1g-Mq-CNn"/>
-                        <constraint firstItem="tss-Ya-CA4" firstAttribute="top" secondItem="Dxc-ND-aE9" secondAttribute="bottom" constant="8" id="ZaT-ou-beT"/>
+                        <constraint firstItem="tss-Ya-CA4" firstAttribute="top" secondItem="Dxc-ND-aE9" secondAttribute="bottom" constant="10" id="ZaT-ou-beT"/>
                         <constraint firstItem="1kh-t8-Mcd" firstAttribute="leading" secondItem="yot-O1-jg3" secondAttribute="leading" id="blI-7R-HBJ"/>
                         <constraint firstAttribute="trailing" secondItem="1kh-t8-Mcd" secondAttribute="trailing" id="wuK-n7-qtj"/>
                         <constraint firstItem="tss-Ya-CA4" firstAttribute="leading" secondItem="yot-O1-jg3" secondAttribute="leading" id="x4x-hg-po4"/>
+                        <constraint firstAttribute="height" constant="50" id="zFa-ha-mda"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="Ye7-uN-WVg" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="5DT-I4-fNs"/>
-                <constraint firstItem="xcB-JT-Qxx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="74C-sE-BSJ"/>
+                <constraint firstItem="Ye7-uN-WVg" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="5DT-I4-fNs"/>
+                <constraint firstItem="xcB-JT-Qxx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="74C-sE-BSJ"/>
                 <constraint firstItem="Im6-v8-s5z" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="95d-vf-nHU"/>
-                <constraint firstAttribute="trailing" secondItem="yot-O1-jg3" secondAttribute="trailing" constant="21" id="ADC-J1-xKP"/>
+                <constraint firstAttribute="trailing" secondItem="yot-O1-jg3" secondAttribute="trailing" constant="50" id="ADC-J1-xKP"/>
                 <constraint firstAttribute="trailing" secondItem="Im6-v8-s5z" secondAttribute="trailing" id="OFJ-NM-v2X"/>
-                <constraint firstAttribute="bottom" secondItem="yot-O1-jg3" secondAttribute="bottom" constant="5" id="OeB-nt-hKb"/>
-                <constraint firstAttribute="bottom" secondItem="xcB-JT-Qxx" secondAttribute="bottom" constant="5" id="PVA-dD-2JH"/>
-                <constraint firstItem="Im6-v8-s5z" firstAttribute="top" secondItem="Ye7-uN-WVg" secondAttribute="bottom" constant="8" id="Qxr-Bm-EY2"/>
+                <constraint firstItem="Im6-v8-s5z" firstAttribute="top" secondItem="Ye7-uN-WVg" secondAttribute="bottom" id="Qxr-Bm-EY2"/>
                 <constraint firstAttribute="centerX" secondItem="Ye7-uN-WVg" secondAttribute="centerX" id="Ubg-qU-xvU"/>
-                <constraint firstItem="xcB-JT-Qxx" firstAttribute="top" secondItem="Im6-v8-s5z" secondAttribute="bottom" constant="5" id="ZXv-wg-wkr"/>
-                <constraint firstItem="yot-O1-jg3" firstAttribute="top" secondItem="Im6-v8-s5z" secondAttribute="bottom" constant="5" id="lt1-Ch-JUp"/>
+                <constraint firstItem="xcB-JT-Qxx" firstAttribute="top" secondItem="Im6-v8-s5z" secondAttribute="bottom" constant="23" id="ZXv-wg-wkr"/>
+                <constraint firstItem="yot-O1-jg3" firstAttribute="top" secondItem="Im6-v8-s5z" secondAttribute="bottom" constant="23" id="lt1-Ch-JUp"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
